--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
         "cnvs/easel": "3.3.*",
         "cnvs/paper-dark": "*",
         "doctrine/dbal": "2.5.*",
-        "fzaninotto/faker": "~1.4"
+        "fzaninotto/faker": "~1.4",
+        "jeroen-g/laravel-packager": "^1.5"
     },
     "require-dev": {
         "mockery/mockery": "0.9.*",
@@ -27,6 +28,7 @@
             "database"
         ],
         "psr-4": {
+            "dinesh\\menu\\": "packages/dinesh/menu/src",
             "App\\": "app/"
         }
     },
